<resources>
    <string name="app_name">Buddy Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cuny_id">Cuny Id</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_title">Welcome to Study Buddy.</string>
    <string name="create_account">Create Account</string>
    <string name="detailed_session_x_miles_away">%s miles away</string>
    <string name="session_detailed_time_x">"Time: "</string>
    <string name="session_detailed_materials_x">Materials: Some Textbook ISBN:13082103810283
    </string>
    <string name="session_detailed_additional_note_x">Additional Notes: For remote users, use Google
        Hangout
    </string>
</resources>
